Addition of data management page.

--- a/datalogger/index.html
+++ b/datalogger/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <div> 
         <a href="visualize-lidar.html" class="button"><span class="centerer"></span><span class='centered'>Visualize Data</span></a>
-        <a class="button"><span class="centerer"></span><span class='centered'>Manage Data</span></a>
+        <a href="manage.html" class="button"><span class="centerer"></span><span class='centered'>Manage Data</span></a>
     </div>
     <div>
     <h1>Description</h1>
