Addition of js/ros.js file, this js file contains the information of the RPi's IP address for the websocket connection. It is used by the other jscripts (sensor-imu, sensor-lidar, manage)

--- a/manage.html
+++ b/manage.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <div>
         <a id="recordButton" class="button recordOff"><span class="centerer"></span><span class='centered'>Recording off</span></a>
-        <p>Recording time: <span id="recordingTime">x</span> min.</p>
+        <p>Recording time: <span id="recordingTime"></span></p>
+        <a id="shutdownButton" class="button"><span class="centerer"></span><span class='centered'>Shutdown</span></a>
       </div>
       <div id="navigation">
         <a href="index.html"><div style="width: 100%"><i class="arrow up"></i></div></a>
@@ -19,6 +20,8 @@
 </head>
 
 <body>
+  <script src="./js/roslib.min.js"></script>
+  <script src="./js/ros.js"></script>
   <script src="js/manage.js"></script>
 </body>
 </html>
