added features for displaying console on browser-client

--- a/manage.html
+++ b/manage.html
@@ -1,27 +1,30 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-    <meta charset="utf-8">
+	<head>
+		<meta charset="utf-8">
 
-    <title>DIV datalogger</title>
-    <meta name="description" content="DIV datalogger data manager">
-    <meta name="author" content="Christian-Nils Åkerberg Boda">
+		<title>DIV datalogger</title>
+		<meta name="description" content="DIV datalogger data manager">
+		<meta name="author" content="Christian-Nils Åkerberg Boda">
 
-    <link rel="stylesheet" href="css/styles.css">
-    <div>
-        <a id="recordButton" class="button recordOff"><span class="centerer"></span><span class='centered'>Recording off</span></a>
-        <p>Recording time: <span id="recordingTime"></span></p>
-        <a id="shutdownButton" class="button"><span class="centerer"></span><span class='centered'>Shutdown</span></a>
-      </div>
-      <div id="navigation">
-        <a href="index.html"><div style="width: 100%"><i class="arrow up"></i></div></a>
-      </div>
-</head>
+		<link rel="stylesheet" href="css/styles.css">
+	</head>
 
-<body>
-  <script src="./js/roslib.min.js"></script>
-  <script src="./js/ros.js"></script>
-  <script src="js/manage.js"></script>
-</body>
+	<body>
+	<div>
+		<a id="recordButton" class="button recordOff"><span class="centerer"></span><span class='centered'>Recording off</span></a>
+		<p>Recording time: <span id="recordingTime"></span></p>
+		<a id="shutdownButton" class="button"><span class="centerer"></span><span class='centered'>Shutdown</span></a>
+		</div>
+		<div id="logbox">
+		</div>
+		<div id="navigation">
+			<a href="index.html"><div style="width: 100%"><i class="arrow up"></i></div></a>
+		</div>
+
+		<script src="./js/roslib.min.js"></script>
+	  	<script src="./js/ros.js"></script>
+	  	<script src="js/manage.js"></script>
+	</body>
 </html>
