--- a/visualize-imu.html
+++ b/visualize-imu.html
@@ -27,8 +27,10 @@
     <a href="visualize-lidar.html"><div><i class="arrow left"></i></div></a><a href="index.html"><div><i class="arrow up"></i></div></a><div><i class="arrow right"></i></div>
   </div>
   <script src="js/roslib.min.js"></script>
-  <script src="js/three.min.js"></script>
 
+  <script src="js/three.min.js"></script>
+  <script src="js/Detector.js"></script>
+  <script src="js/loaders/ColladaLoader.js"></script>
   <script src="js/renderers/Projector.js"></script>
   <script src="js/renderers/CanvasRenderer.js"></script>
   <script src="./js/ros.js"></script>
