--- a/visualize-imu.html
+++ b/visualize-imu.html
@@ -20,8 +20,15 @@
   <div id="description">
     <h1>Description</h1>
     <p>
-      Some info from the sensor
+      Rotation [deg]:
     </p>
+	<table style="width: 100%">
+		<tr>
+			<td id="rot_x" style="width: 33.3%; text-align: center; font-size: large">-</td>
+			<td id="rot_y" style="width: 33.3%; text-align: center; font-size: large">-</td>
+			<td id="rot_z" style="width: 33.3%; text-align: center; font-size: large">-</td>
+		</tr>
+	</table>
   </div>
   <div id="navigation">
     <a href="visualize-lidar.html"><div><i class="arrow left"></i></div></a><a href="index.html"><div><i class="arrow up"></i></div></a><div><i class="arrow right"></i></div>
