camera visualization added

--- a/visualize-lidar.html
+++ b/visualize-lidar.html
@@ -28,7 +28,7 @@
     </p>
   </div>
   <div id="navigation">
-    <div><i class="arrow left"></i></div><a href="index.html"><div><i class="arrow up"></i></div></a><a href="visualize-imu.html"><div><i class="arrow right"></i></div></a>
+    <a href="visualize-camera.html"><div><i class="arrow left"></i></div></a><a href="index.html"><div><i class="arrow up"></i></div></a><a href="visualize-imu.html"><div><i class="arrow right"></i></div></a>
   </div>
   <script src="./js/roslib.min.js"></script>
   <script src="./js/ros.js"></script>
