--- a/visualize-imu.html
+++ b/visualize-imu.html
@@ -31,7 +31,7 @@
 	</table>
   </div>
   <div id="navigation">
-    <a href="visualize-lidar.html"><div><i class="arrow left"></i></div></a><a href="index.html"><div><i class="arrow up"></i></div></a><div><i class="arrow right"></i></div>
+    <a href="visualize-lidar.html"><div><i class="arrow left"></i></div></a><a href="index.html"><div><i class="arrow up"></i></div></a><a href="visualize-camera.html"><div><i class="arrow right"></i></div>
   </div>
   <script src="js/roslib.min.js"></script>
 
